--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.52.1",
     "react-player": "^2.16.0",
     "react-query": "^3.39.3",
