feat (MAJOR) : serving the client via server code

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:watch": "chokidar \"src/**/*\" -c \"npm run build\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@hookform/devtools": "^4.3.1"
+    "@hookform/devtools": "^4.3.1",
+    "chokidar-cli": "^3.0.0"
   }
 }
