--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
