--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "start:dev": "nodemon ./src/index.js",
-    "postinstall": "cd ../client && npm install && npm run build"
+    "build": "cd ../client && npm install && npm run build",
+    "postinstall": "npm run build"
   },
   "author": "Robin Mon Miranda",
   "license": "ISC",
