--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
+    "start": "node index.js",
     "start:dev": "nodemon ./src/index.js",
     "build": "cd ../client && npm install && npm run build",
     "postinstall": "npm run build"
