--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "ilms",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.13.0",
